<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    android:id="@+id/customdialog"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/syst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"

            android:hint="Systolic"
            android:padding="10dp" />

        <EditText
            android:id="@+id/diast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"

            android:hint="Diastolic"
            android:padding="10dp" />
        <EditText
            android:id="@+id/pulse_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"

            android:hint="Pulse Rate (max 150)"
            android:padding="10dp" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textSize="16sp"

                android:hint="Date"
                android:padding="10dp"
                />

            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"

                android:layout_weight="1.3"
                android:textSize="16sp"
                android:hint="Time"
                android:padding="10dp" />



        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"

            android:hint="Comments"
            android:padding="10dp" />


            <Button
                android:id="@+id/yes_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"

                android:backgroundTint="@color/black"
                android:background="@drawable/custombutton"
                android:text="Yes"
                android:textColor="@color/black"
                android:textStyle="bold"

                />

            <Button
                android:textStyle="bold"
                android:id="@+id/no_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"

                android:background="@drawable/custombutton"
                android:text="No"
                android:textColor="@color/black"
                />
        </LinearLayout>

</ScrollView>