...
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <Button
    android:id="@+id/cnt3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Add"
    android:background="@drawable/custombutton"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <Button
    android:id="@+id/cnt4"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:text="Records"

    android:textStyle="bold"
    android:background="@drawable/custombutton"
...
