package com.example.cardiacrecorder;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;

import androidx.test.espresso.Espresso;
import androidx.test.espresso.action.ViewActions;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@RunWith(AndroidJUnit4.class)
@LargeTest

public class MainActivityUiTest {

    @Rule
    public ActivityScenarioRule<MainActivity>activityScenarioRule
            = new ActivityScenarioRule<MainActivity>(MainActivity.class);


    @Test
    public void CreateAccountAndSignUpTest()
    {
        onView(withId(R.id.main_activity)).check(matches(isDisplayed()));
        onView(withId(R.id.logo)).check(matches(isDisplayed()));
        onView(withId(R.id.s1)).perform(ViewActions.typeText("Mukim"));
        onView(withId(R.id.s2)).perform(ViewActions.typeText("mukim2@gmail.com"));
        onView(withId(R.id.s3)).perform(ViewActions.typeText("mukim@12"));
        Espresso.pressBack();
        onView(withId(R.id.s4)).perform(click());
        onView(withId(R.id.main_activity)).check(matches(isDisplayed()));

        onView(withId(R.id.s5)).perform(click());
    }

}
